--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.6",
+    "tw-elements": "^2.0.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
