--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.510.0",
     "next-themes": "^0.4.6",
-    "react": "^19.1.0",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.56.3",
     "react-router-dom": "^7.6.0",
     "react-select": "^5.10.1",
@@ -41,6 +41,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tw-elements": "^2.0.0",
+    "vaul": "^1.1.2",
     "zod": "^3.24.4"
   },
   "devDependencies": {
